--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,9 @@
- <footer class="bg-dark text-white pt-5 pb-4">
+ <footer class="bg-warning text-white h-25 pt-5 pb-4" style="background-color: rgba(0,0,0,0.5);">
     <div class="container">
       <div class="row no-gutters">
         <div class="col-md-4">
           <p>朝活を応援するコミュニティ</p>
-          <%= image_tag('') %>
+          <%#= image_tag('') %>
         </div>
         <div class="col-md-8">
           <h6 class="text-white mt-2 mb-3">Link</h6>
