--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
-<header class="shadow-sm">
+<header class="shadow-sm bg-light">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand p-3" href="/"><%= image_tag('logo.png') %></a>
+      <a class="navbar-brand p-3" href="/"><%#= image_tag('') %></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
         </li>
 
         <li class="nav-item">
-          <%= link_to 'ログアウト', destroy_user_session_path, class: 'nav-link text-dark' %>
+          <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
         </li>
 
         <% elsif admin_signed_in? %>
@@ -49,7 +49,7 @@
         </li>
 
         <li class="nav-item">
-          <%= link_to 'ログアウト', destroy_admin_session_path, class: 'nav-link text-dark' %>
+          <%= link_to 'ログアウト', destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %>
         </li>
 
         <% else %>
