--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Public::Users#show</h1>
-<p>Find me in app/views/public/users/show.html.erb</p>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-5'>
+      <h2>会員情報</h2>
+      <%= render 'info', user: @user %>
+      <h2 class="mt-3">参加中コミュニティ</h2>
+      <%#= render 'books/form', book: @book %>
+    </div>
+    <div class='col-md-6 offset-md-1'>
+      <h1>私は明日、をします!</h1>
+      <h2><%= @user.name %>さんの投稿</h2>
+      <%#= render 'books/index',books: @books %>
+    </div>
+  </div>
+</div>
