--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -4,10 +4,10 @@
     <h2>プロフィール編集</h2>
     <%= form_with model: [:public, @user], url: user_path(@user.id), method: :patch, local: true do |f| %>
       <%#= render 'layouts/errors', obj: @user %>
-      <!--<div class="form-group">-->
-      <!--  <%#= f.label :image %>-->
-      <!--  <%#= f.file_field :profile_image, class: "form-control-file user_image", accept: 'image/*' %>-->
-      <!--</div>-->
+      <div class="form-group">
+        <%= f.label :image, "プロフィール画像" %>
+        <%= f.file_field :profile_image, class: "form-control-file user_image", accept: 'image/*' %>
+      </div>
       <div class="form-group">
         <%= f.label :name, "名前" %>
         <%= f.text_field :name, class: "form-control name" %>
