--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Public::Users#index</h1>
-<p>Find me in app/views/public/users/index.html.erb</p>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-5'>
+      <h2>会員情報</h2>
+      <%= render 'info', user: @user %>
+      <h2 class="mt-3">参加中コミュニティ</h2>
+      <%#= render 'books/form', book: @book %>
+    </div>
+    <div class='col-md-6 offset-md-1'>
+      <h2>会員一覧</h2>
+      <%= render 'index', users: @users %>
+    </div>
+  </div>
+</div>
