--- a/app/views/public/announcements/edit.html.erb
+++ b/app/views/public/announcements/edit.html.erb
@@ -9,15 +9,18 @@
         <%= f.text_field :announcement, class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.radio_button :achieve_status, Announcement.achieve_status.key(0) %>
-        <%= f.label :achieve_status, Announcement.achieve_status_i18n[:nonachieve] %>
+        <%= f.radio_button :achieve_status, Announcement.achieve_statuses.key(0) %>
+        <%= f.label :achieve_status, Announcement.achieve_statuses_i18n[:nonachieve] %>
 
-        <%= f.radio_button :achieve_status, Announcement.achieve_status.key(1) %>
-        <%= f.label :achieve_status, Announcement.achieve_status_i18n[:achieve]%>
+        <%= f.radio_button :achieve_status, Announcement.achieve_statuses.key(1) %>
+        <%= f.label :achieve_status, Announcement.achieve_statuses_i18n[:achieve]%>
       </div>
 
       <div class="form-group">
         <%= f.submit class: 'btn btn-outline-warning' %>
+        <% if @announcement.user == current_user %>
+          <%= link_to "delete", user_announcement_path(@announcement.user, @announcement), method: :delete, class: 'btn btn-outline-danger' %>
+        <% end %>
       </div>
     <% end %>
     </div>
