--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,2 +1,26 @@
-<h1>Public::Posts#new</h1>
-<p>Find me in app/views/public/posts/new.html.erb</p>
+<div class='container'>
+  <div class='row'>
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+    <h2>新規投稿</h2>
+    <%= form_with model: @post, url: posts_path, method: :post, local: true do |f| %>
+      <%#= render 'layouts/errors', obj: @user %>
+      <div class="form-group">
+        <%= f.label :post_image, "投稿写真" %>
+        <%= f.file_field :post_image, class: "form-control-file user_image", accept: 'image/*' %>
+      </div>
+      <div class="form-group">
+        <%= f.label :title, "投稿タイトル" %>
+        <%= f.text_field :title, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :body, "投稿本文" %>
+        <%= f.text_area :body, class: "form-control" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.submit class: 'btn btn-outline-warning' %>
+      </div>
+    <% end %>
+    </div>
+  </div>
+</div>
