--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,3 +1,8 @@
+<div class="text-right mr-5">
+  <%= link_to new_post_path, class: 'btn btn-outline-warning' do %>
+    <i class="fa-solid fa-pen-to-square"></i>
+  <% end %>
+</div>
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-5'>
@@ -7,9 +12,12 @@
       <%#= render 'books/form', book: @book %>
     </div>
     <div class='col-md-6 offset-md-1'>
-      
-      <%= render 'public/announcements/announcement', announcements: @announcements %>をします!
-      <%= link_to '宣言する!', new_user_announcement_path(@user.id) %>
+      <div class="border rounded-circle p-2 text-center">
+        <%= render 'public/announcements/announcement', announcements: @announcements %>をします!
+        <% if @user.id == current_user.id %>
+          <%= link_to '宣言する!', new_user_announcement_path(@user.id) %>
+        <% end %>
+      </div>
       <h2><%= @user.name %>さんの投稿</h2>
       <%#= render 'books/index',books: @books %>
     </div>
