--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -21,7 +21,7 @@
         </div>
       </div>
       <h2><%= @user.name %>さんの投稿</h2>
-      <%#= render 'books/index',books: @books %>
+      <%= render 'public/posts/index',posts: @posts %>
     </div>
   </div>
 </div>
