--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Public::Posts#index</h1>
-<p>Find me in app/views/public/posts/index.html.erb</p>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-5'>
+      <h2>会員情報</h2>
+      <%= render 'public/users/info', user: @user %>
+      <h2 class="mt-3">参加中コミュニティ</h2>
+      <%#= render 'books/form', book: @book %>
+    </div>
+    <div class='col-md-6 offset-md-1'>
+      <h2>投稿一覧</h2>
+      <%= render 'index', posts: @posts %>
+    </div>
+  </div>
+</div>
