--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,2 +1,29 @@
-<h1>Public::Posts#show</h1>
-<p>Find me in app/views/public/posts/show.html.erb</p>
+<div class='container'>
+  <div class='row'>
+    <div class='col-md-8 offset-md-1'>
+  		<h2>投稿詳細</h2>
+      <table class='table table-borderless'>
+  		  <tr>
+          <td>
+            <%= link_to user_path(@user.id) do %>
+              <%= image_tag @post.user.get_profile_image(50, 50) %>
+              <%= link_to @post.user.name, user_path(@user.id) %>
+            <% end %>
+          </td>
+        </tr>
+      </table>
+
+      <div class="card" style="max-width: 75rem;">
+        <%= image_tag @post.get_post_image(100, 100), class: "card-image-top" %>
+        <div class="card-body">
+          <h4 class="card-title"><%= @post.title %>  <%= @post.created_at.strftime('%Y/%m/%d') %></h4>
+          <p class="card-text"><%= @post.body %></p>
+          <% if @post.user == current_user %>
+            <%= link_to "削除する", post_path(@post.id), method: :delete, class: "btn btn-outline-danger" %>
+          <% end %>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
