--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -2,7 +2,9 @@
   <div class="card" style="max-width: 75rem;">
     <%= image_tag post.get_post_image(100, 100), class: "card-image-top" %>
     <div class="card-body">
-      <h4 class="card-title"><%= post.title %></h4>
+      <h4 class="card-title">
+        <%= post.title %>  <%= post.created_at.strftime('%Y/%m/%d') %>  コメント数:<%= post.post_comments.count %>
+      </h4>
       <p class="card-text"><%= post.body %></p>
       <%= link_to "投稿を見る", post_path(post.id), class: "btn btn-outline-warning" %>
     </div>
