--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -16,7 +16,9 @@
       <div class="card" style="max-width: 75rem;">
         <%= image_tag @post.get_post_image(100, 100), class: "card-image-top" %>
         <div class="card-body">
-          <h4 class="card-title"><%= @post.title %>  <%= @post.created_at.strftime('%Y/%m/%d') %></h4>
+          <h4 class="card-title">
+            <%= @post.title %>  <%= @post.created_at.strftime('%Y/%m/%d') %>  コメント数:<%= @post.post_comments.count %>
+          </h4>
           <p class="card-text"><%= @post.body %></p>
           <% if @post.user == current_user %>
             <%= link_to "削除する", post_path(@post.id), method: :delete, class: "btn btn-outline-danger" %>
@@ -24,6 +26,8 @@
         </div>
       </div>
 
+      <%= render "public/post_comments/index", post: @post %>
+      <%= render "public/post_comments/form", post: @post, post_comment: @post_comment %>
     </div>
   </div>
 </div>
