--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -3,8 +3,9 @@
     <%= image_tag post.get_post_image(100, 100), class: "card-image-top" %>
     <div class="card-body">
       <h4 class="card-title">
-        <%= post.title %>  <%= post.created_at.strftime('%Y/%m/%d') %>  コメント数:<%= post.post_comments.count %>
+        <%= post.title %>
       </h4>
+      <h5><%= post.created_at.strftime('%Y/%m/%d') %>  コメント数:<%= post.post_comments.count %>  <%= render "public/favorites/btn", post: post %></h5>
       <p class="card-text"><%= post.body %></p>
       <%= link_to "投稿を見る", post_path(post.id), class: "btn btn-outline-warning" %>
     </div>
