--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -17,8 +17,9 @@
         <%= image_tag @post.get_post_image(100, 100), class: "card-image-top" %>
         <div class="card-body">
           <h4 class="card-title">
-            <%= @post.title %>  <%= @post.created_at.strftime('%Y/%m/%d') %>  コメント数:<%= @post.post_comments.count %>
+            <%= @post.title %>
           </h4>
+          <h5><%= @post.created_at.strftime('%Y/%m/%d') %>  コメント数:<%= @post.post_comments.count %>  <%= render "public/favorites/btn", post: @post %></h5>
           <p class="card-text"><%= @post.body %></p>
           <% if @post.user == current_user %>
             <%= link_to "削除する", post_path(@post.id), method: :delete, class: "btn btn-outline-danger" %>
