--- a/app/views/public/favorites/_btn.html.erb
+++ b/app/views/public/favorites/_btn.html.erb
@@ -1,10 +1,10 @@
 <% if post.favorited_by?(current_user) %>
-  <%= link_to post_favorites_path(post.id), method: :delete do %>
+  <%= link_to post_favorites_path(post.id), method: :delete, remote: true do %>
     <i class="fas fa-heart" aria-hidden="true" style="color: red;"></i>
     <%= post.favorites.count %> いいね
   <% end %>
 <% else %>
-  <%= link_to post_favorites_path(post.id), method: :post do %>
+  <%= link_to post_favorites_path(post.id), method: :post, remote: true do %>
     <i class="fas fa-heart" aria-hidden="true"></i>
     <%= post.favorites.count %> いいね
   <% end %>
