--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -5,7 +5,7 @@
       <h4 class="card-title">
         <%= post.title %>
       </h4>
-      <h5><%= post.created_at.strftime('%Y/%m/%d') %>  コメント数:<%= post.post_comments.count %>  <%= render "public/favorites/btn", post: post %></h5>
+      <h5 id="post_<%= post.id %>"><%= post.created_at.strftime('%Y/%m/%d') %>  コメント数:<%= post.post_comments.count %>  <span class="favorite-btn"><%= render "public/favorites/btn", post: post %></span></h5>
       <p class="card-text"><%= post.body %></p>
       <%= link_to "投稿を見る", post_path(post.id), class: "btn btn-outline-warning" %>
     </div>
