--- a/app/views/public/post_comments/_index.html.erb
+++ b/app/views/public/post_comments/_index.html.erb
@@ -11,7 +11,7 @@
       <td><%= post_comment.comment %></td>
       <td>
         <% if post_comment.user == current_user %>
-          <%= link_to "削除する", post_post_comment_path(post_comment.post, post_comment), method: :delete, class: "btn btn-outline-danger" %>
+          <%= link_to "削除する", post_post_comment_path(post_comment.post, post_comment), method: :delete, remote: true, class: "btn btn-outline-danger" %>
         <% end %>
       </td>
     </tr>
