--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -19,15 +19,16 @@
           <h4 class="card-title">
             <%= @post.title %>
           </h4>
-          <h5 id="post_<%= @post.id %>"><%= @post.created_at.strftime('%Y/%m/%d') %>  コメント数:<%= @post.post_comments.count %>  <span class="favorite-btn"><%= render "public/favorites/btn", post: @post %></span></h5>
+          <h5 id="post_<%= @post.id %>"><%= @post.created_at.strftime('%Y/%m/%d') %>  <span class="comments-count">コメント数:<%= @post.post_comments.count %></span>  <span class="favorite-btn"><%= render "public/favorites/btn", post: @post %></span></h5>
           <p class="card-text"><%= @post.body %></p>
           <% if @post.user == current_user %>
             <%= link_to "削除する", post_path(@post.id), method: :delete, class: "btn btn-outline-danger" %>
           <% end %>
         </div>
       </div>
-
-      <%= render "public/post_comments/index", post: @post %>
+      <div class="post_comments">
+        <%= render "public/post_comments/index", post: @post %>
+      </div>
       <%= render "public/post_comments/form", post: @post, post_comment: @post_comment %>
     </div>
   </div>
