--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -7,6 +7,7 @@
       <%#= render 'books/form', book: @book %>
     </div>
     <div class='col-md-6 offset-md-1'>
+      <div><%= link_to "コミュニティを作成", new_group_path %> | <%= link_to "コミュニティ一覧", groups_path %></div>
       <h2>会員一覧</h2>
       <%= render 'index', users: @users %>
     </div>
