--- a/app/views/public/groups/_index.html.erb
+++ b/app/views/public/groups/_index.html.erb
@@ -1,9 +1,10 @@
 <table class='table'>
   <thead>
     <tr>
-      <th>Image</th>
-      <th>Name</th>
-      <th>Members</th>
+      <th></th>
+      <th>コミュニティ名</th>
+      <th>参加中メンバー</th>
+      <th></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,10 +13,12 @@
       <tr>
         <td><%= image_tag group.get_image(50, 50) %></td>
         <td><%= link_to group.name, group_path(group.id) %></td>
-        <td></td>
+        <td><%= group.group_users.count %></td>
+        <td>
         <% if group.owner_id == current_user.id %>
           <%= link_to '編集', edit_group_path(group.id), class: 'btn btn-outline-success' %>
         <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
