--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -9,7 +9,7 @@
       <h2>会員情報</h2>
       <%= render 'info', user: @user %>
       <h2 class="mt-3">参加中コミュニティ</h2>
-      <%#= render 'books/form', book: @book %>
+      <%= render 'user_groups', user: @user %>
     </div>
     <div class='col-md-6 offset-md-1'>
       <div class="border rounded-circle p-2 text-center">
