--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -6,9 +6,9 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-5'>
-      <h2>会員情報</h2>
+      <h2><%= @user.name %>さんの会員情報</h2>
       <%= render 'info', user: @user %>
-      <h2 class="mt-3">参加中コミュニティ</h2>
+      <h2 class="mt-3"><%= @user.name %>さんの参加中コミュニティ</h2>
       <%= render 'user_groups', user: @user %>
     </div>
     <div class='col-md-6 offset-md-1'>
