--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -1,13 +1,24 @@
-<% posts.each do |post| %>
-  <div class="card" style="max-width: 75rem;">
-    <%= image_tag post.get_post_image(200, 200), class: "card-image-top" %>
-    <div class="card-body">
-      <h4 class="card-title">
-        <%= post.title %>
-      </h4>
-      <h5 id="post_<%= post.id %>"><%= post.created_at.strftime('%Y/%m/%d') %>  <span class="comments-count">コメント数:<%= post.post_comments.count %></span>  <span class="favorite-btn"><%= render "public/favorites/btn", post: post %></span></h5>
-      <p class="card-text"><%= post.body %></p>
-      <%= link_to "投稿を見る", post_path(post.id), class: "btn btn-outline-warning" %>
+<div class="card-group">
+  <% posts.each do |post| %>
+    <div class="card" style="max-width: 75rem;">
+      <%= image_tag post.get_post_image(200, 200), class: "card-image-top h-50" %>
+      <div class="card-body">
+        <h4 class="card-title">
+          <%= post.title %>
+        </h4>
+        <h5 id="post_<%= post.id %>"><%= post.created_at.strftime('%Y/%m/%d') %>
+          <br><span class="comments-count">コメント数:<%= post.post_comments.count %></span>
+          <br><span class="favorite-btn"><%= render "public/favorites/btn", post: post %></span>
+        </h5>
+        <p class="card-text"><%= post.body %></p>
+        <%= link_to "投稿を見る", post_path(post.id), class: "btn btn-outline-warning" %>
+      </div>
+      <div class="card-footer">
+        <!--<h4>投稿ジャンル</h4>-->
+        <!--<%#= post.genres.each do |genre| %>-->
+        <!--  <li style="list-style: none;"><%#= genre.name %></li>-->
+        <!--<%# end %>-->
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
