--- a/app/views/public/groups/_index.html.erb
+++ b/app/views/public/groups/_index.html.erb
@@ -11,7 +11,7 @@
   <tbody>
     <% groups.each do |group| %>
       <tr>
-        <td><%= image_tag group.get_image(50, 50) %></td>
+        <td><%= image_tag group.get_image(50, 50), class:"rounded-circle"; %></td>
         <td><%= link_to group.name, group_path(group.id) %></td>
         <td><%= group.group_users.count %></td>
         <td>
