--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -1,24 +1,23 @@
 <div class="card-group">
   <% posts.each do |post| %>
-    <div class="card" style="max-width: 75rem;">
+    <div class="card w-200 mx-auto mt-4 shadow-lg" style="max-width: 75rem;">
       <%= image_tag post.get_post_image(200, 200), class: "card-image-top h-50" %>
       <div class="card-body">
         <h4 class="card-title">
-          <%= post.title %>
+          <%= link_to post_path(post.id), class: "text-dark" do %>
+            <strong><i class="far fa-flag"></i><span> <%= post.title %></span></strong>
+          <% end %>
         </h4>
         <h5 id="post_<%= post.id %>"><%= post.created_at.strftime('%Y/%m/%d') %>
           <br><span class="comments-count">コメント数:<%= post.post_comments.count %></span>
           <br><span class="favorite-btn"><%= render "public/favorites/btn", post: post %></span>
         </h5>
-        <p class="card-text"><%= post.body %></p>
-        <%= link_to "投稿を見る", post_path(post.id), class: "btn btn-outline-warning" %>
+        <p class="card-text">説明:<%= post.body %></p>
+        <span><i class="fas fa-user"></i> By<%= image_tag post.user.get_profile_image(30,30), class:"rounded-circle"; %><%= post.user.name %></span>
+        <span><%= link_to "投稿を見る", post_path(post.id), class: "btn btn-outline-warning btn-sm" %></span>
       </div>
-      <div class="card-footer">
-        <!--<h4>投稿ジャンル</h4>-->
-        <!--<%#= post.genres.each do |genre| %>-->
-        <!--  <li style="list-style: none;"><%#= genre.name %></li>-->
-        <!--<%# end %>-->
-      </div>
+
     </div>
   <% end %>
 </div>
+<%= paginate posts %>
