--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,14 +1,14 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
-    <div class='col-md-5'>
+    <div class='col-md-4'>
       <h2><%= @user.name %>さんの会員情報</h2>
       <%= render 'public/users/info', user: @user %>
       <h2 class="mt-3"><%= @user.name %>さんの参加中コミュニティ</h2>
       <%= render 'public/users/user_groups', user: @user %>
     </div>
-    <div class='col-md-6 offset-md-1'>
+    <div class='col-md-7 offset-md-1'>
       <h2>投稿一覧</h2>
-      <%= render 'index', posts: @posts %>
+      <%= render 'index', posts: @posts, class: "mb-3" %>
     </div>
   </div>
 </div>
