--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,2 +1,41 @@
-<h1>Admin::Posts#show</h1>
-<p>Find me in app/views/admin/posts/show.html.erb</p>
+<div class='container'>
+  <div class='row'>
+    <div class='col-md-8 offset-md-1'>
+  		<h2>投稿詳細</h2>
+      <table class='table table-borderless'>
+  		  <tr>
+          <td>
+            <%= link_to user_path(@user.id) do %>
+              <%= image_tag @post.user.get_profile_image(50, 50) %>
+              <%= link_to @post.user.name, user_path(@user.id) %>
+            <% end %>
+          </td>
+        </tr>
+      </table>
+
+      <div class="card" style="max-width: 75rem;">
+        <%= image_tag @post.get_post_image(900, 900), class: "card-image-top" %>
+        <div class="card-body">
+          <h4 class="card-title">
+            <%= @post.title %>
+          </h4>
+          <!--<h5 id="post_<%= @post.id %>"><%= @post.created_at.strftime('%Y/%m/%d') %>  <span class="comments-count">コメント数:<%= @post.post_comments.count %></span>  <span class="favorite-btn"><%#= render "public/favorites/btn", post: @post %></span></h5>-->
+          <p class="card-text"><%= @post.body %></p>
+          <% if @post.user == current_user %>
+            <%= link_to "削除する", post_path(@post.id), method: :delete, class: "btn btn-outline-danger" %>
+          <% end %>
+        </div>
+        <div class="card-footer">
+          <h4>投稿ジャンル</h4>
+          <% @post.genres.each do |genre| %>
+            <li style="list-style: none;"><%= genre.name %></li>
+          <% end %>
+        </div>
+      </div>
+      <div class="post_comments">
+        <%= render "public/post_comments/index", post: @post %>
+      </div>
+      <%= render "public/post_comments/form", post: @post, post_comment: @post_comment %>
+    </div>
+  </div>
+</div>
