--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,7 +40,7 @@
         </li>
 
         <li class="nav-item">
-          <%= link_to 'コメント一覧', admin_post_post_comments_path, class: 'nav-link text-dark' %>
+          <%= link_to 'コメント一覧', admin_posts_path, class: 'nav-link text-dark' %>
         </li>
 
         <li class="nav-item">
@@ -63,6 +63,10 @@
 
         <li class="nav-item">
           <%= link_to "ゲストログイン", new_user_session_path, class: 'nav-link text-dark' %>
+        </li>
+
+        <li class="nav-item">
+          <%= link_to "管理者はこちら", new_admin_session_path, class: 'nav-link text-dark' %>
         </li>
 
         <% end %>
