[Add]User_admin

--- a/app/views/public/groups/_member.html.erb
+++ b/app/views/public/groups/_member.html.erb
@@ -1,7 +1,9 @@
 <h5>メンバー</h5>
 <% group.users.each do |user| %>
+ <% unless user.is_deleted %>
   <li class="list-group-item">
     <%= image_tag user.get_profile_image(50, 50) %>
     <%= link_to user.name, user_path(user.id) %>
   </li>
+ <% end %>
 <% end %>
