--- a/app/views/admin/post_comments/index.html.erb
+++ b/app/views/admin/post_comments/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Admin::PostComments#index</h1>
-<p>Find me in app/views/admin/post_comments/index.html.erb</p>
+<div class='container'>
+  <div class='row'>
+    <div class='col-md-10 offset-md-1'>
+  		<h2>投稿"<%= @post.title %>"に対するコメント一覧</h2>
+      <h5 id="post_<%= @post.id %>"> <span class="comments-count">コメント数:<%= @post.post_comments.count %></span></span></h5>
+
+      <div class="post_comments">
+        <%= render "admin/post_comments/index", post: @post %>
+      </div>
+      <%#= render "public/post_comments/form", post: @post, post_comment: @post_comment %>
+    </div>
+  </div>
+</div>
