--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -5,9 +5,9 @@
       <table class='table table-borderless'>
   		  <tr>
           <td>
-            <%= link_to user_path(@user.id) do %>
+            <%= link_to admin_user_path(@user.id) do %>
               <%= image_tag @post.user.get_profile_image(50, 50) %>
-              <%= link_to @post.user.name, user_path(@user.id) %>
+              <%= @post.user.name %>
             <% end %>
           </td>
         </tr>
@@ -19,11 +19,9 @@
           <h4 class="card-title">
             <%= @post.title %>
           </h4>
-          <!--<h5 id="post_<%= @post.id %>"><%= @post.created_at.strftime('%Y/%m/%d') %>  <span class="comments-count">コメント数:<%= @post.post_comments.count %></span>  <span class="favorite-btn"><%#= render "public/favorites/btn", post: @post %></span></h5>-->
+          <h5 id="post_<%= @post.id %>"><%= @post.created_at.strftime('%Y/%m/%d') %>  <span class="comments-count">コメント数:<%= @post.post_comments.count %></span>  <span class="favorite-btn"><%#= render "public/favorites/btn", post: @post %></span></h5>
           <p class="card-text"><%= @post.body %></p>
-          <% if @post.user == current_user %>
-            <%= link_to "削除する", post_path(@post.id), method: :delete, class: "btn btn-outline-danger" %>
-          <% end %>
+          <%= link_to "削除する", admin_post_path(@post.id), method: :delete, class: "btn btn-outline-danger" %>
         </div>
         <div class="card-footer">
           <h4>投稿ジャンル</h4>
@@ -33,9 +31,9 @@
         </div>
       </div>
       <div class="post_comments">
-        <%= render "public/post_comments/index", post: @post %>
+        <%= render "admin/post_comments/index", post: @post %>
       </div>
-      <%= render "public/post_comments/form", post: @post, post_comment: @post_comment %>
+      <%#= render "public/post_comments/form", post: @post, post_comment: @post_comment %>
     </div>
   </div>
 </div>
