--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,2 +1,21 @@
-<h1>Admin::Users#edit</h1>
-<p>Find me in app/views/admin/users/edit.html.erb</p>
+<div class='container'>
+  <div class='row'>
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+    <h2>会員ステータス変更</h2>
+    <%= form_with model: [:admin, @user], url: admin_user_path(@user.id), method: :patch, local: true do |f| %>
+      <%#= render 'layouts/errors', obj: @user %>
+      <div class="form-group">
+        <%= f.radio_button :is_deleted, "false" %>
+        <%= f.label :is_deleted, "有効会員" %>
+
+        <%= f.radio_button :is_deleted, "true" %>
+        <%= f.label :is_deleted, "利用停止" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.submit class: 'btn btn-outline-success' %>
+      </div>
+    <% end %>
+    </div>
+  </div>
+</div>
