--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Admin::Users#show</h1>
-<p>Find me in app/views/admin/users/show.html.erb</p>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-5 offset-md-1'>
+      <h2><%= @user.name %>さんの会員詳細</h2>
+      <%= render 'info', user: @user %>
+    </div>
+  </div>
+</div>
