--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -8,7 +8,7 @@
     <div class='col-md-4'>
       <h2><%= @user.name %>さんの会員情報</h2>
       <%= render 'info', user: @user %>
-      <h2 class="mt-3"><%= @user.name %>さんの参加中コミュニティ</h2>
+      <h2 class="mt-3"><%= @user.name %>さんの</br>参加中コミュニティ</h2>
       <%= render 'user_groups', user: @user %>
     </div>
     <div class='col-md-7 offset-md-1'>
