--- a/app/views/public/notifications/index.html.erb
+++ b/app/views/public/notifications/index.html.erb
@@ -1,8 +1,8 @@
 <% notifications = @notifications.where.not(visitor_id: current_user.id) %>
-  <% if notifications.exists? && unchecked_notifications.any? %>
+  <% if notifications.exists? %>
     <%= render notifications %>
       <!--binding.pry-->
-    <%#= paginate notifications %>
+    <%= paginate notifications %>
   <% else %>
     <p>通知はありません</p>
   <% end %>
