--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag "application", :media => "all" %>
 <header class="shadow-sm bg-light">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
@@ -17,7 +18,9 @@
                 <i class="fas fa-circle n-circle fa-stack-1x"></i>
               </span>
             <% else %>
-              <i class="far fa-bell fa-lg" style="font-size: 1.5em;"></i>
+              <span class="fa-stack">
+                <i class="far fa-bell fa-lg" style="font-size: 1.5em;"></i>
+              </span>
             <% end %>
           <% end %>
         </li>
