--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,2 +1,25 @@
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
+<%= stylesheet_link_tag "application", :media => "all" %>
+<div id="container">
+  <div id="theTarget">
+
+    <div class="image1">
+      <div class='container px-5 px-sm-0'>
+        <div class='row'>
+          <div class='col-md-8'>
+             <h2>新着投稿(3件)</h2>
+             <%= render 'public/homes/top_posts',posts: @posts %>
+          </div>
+          <div class='col-md-4'>
+            <h2 class="mt-3">新着コミュニティ(6件)</h2>
+            <%= render 'public/homes/top_groups', groups: @groups %>
+          </div>
+        </div>
+      </div>
+  　</div>
+
+    <div class="image2"></div>
+    <div class="image3"></div>
+    <div class="image4"></div>
+    <div class="image5"></div>
+  </div>
+</div>
