--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="row no-gutters">
         <div class="col-md-4">
-          <p>朝活を応援するコミュニティ</p>
+          <h5>朝活を応援するコミュニティ</h5>
           <%#= image_tag('') %>
         </div>
         <div class="col-md-8">
