--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag "application", :media => "all" %>
+<%#= stylesheet_link_tag "application", :media => "all" %>
 <header class="shadow-sm bg-light">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
@@ -7,6 +7,9 @@
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+       <% unless notice.nil? %>
+        <p id="notice"><%= notice %></p>
+       <% end %>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
