--- a/app/views/public/homes/_top_groups.html.erb
+++ b/app/views/public/homes/_top_groups.html.erb
@@ -1,26 +1,45 @@
-<table class='table table-borderless'>
-  <thead>
-    <tr>
-      <th></th>
-      <th>コミュニティ名</th>
-      <th>参加中メンバー</th>
-      <th></th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% groups.each do |group| %>
-      <tr class="table-warning">
-        <td><%= image_tag group.get_image(50, 50), class:"rounded-circle"; %></td>
-        <td><strong><%= link_to group.name, new_user_registration_path %></strong></td>
-        <td><%= group.group_users.count %></td>
-        <td>
-        <!--<%# if group.owner_id == current_user.id %>-->
-        <!--  <%#= link_to '編集', edit_group_path(group.id), class: 'btn btn-outline-success' %>-->
-        <!--<%# end %>-->
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<!--<table class='table table-borderless'>-->
+<!--  <thead>-->
+<!--    <tr>-->
+<!--      <th></th>-->
+<!--      <th class="text-warning">コミュニティ名</th>-->
+<!--      <th class="text-warning">参加中メンバー</th>-->
+<!--      <th class="text-warning">グループ紹介</th>-->
+<!--      <th colspan="3"></th>-->
+<!--    </tr>-->
+<!--  </thead>-->
+<!--  <tbody>-->
+<!--    <%# groups.each do |group| %>-->
+<!--      <tr class="table-warning">-->
+<!--        <td><%#= image_tag group.get_image(50, 50), class:"rounded-circle"; %></td>-->
+<!--        <td><strong><%#= link_to group.name, new_user_registration_path %></strong></td>-->
+<!--        <td><%#= group.group_users.count %></td>-->
+<!--        <td>-->
+<!--          <%#= group.introduction %>-->
+<!--        </td>-->
+<!--      </tr>-->
+<!--    <%# end %>-->
+<!--  </tbody>-->
+<!--</table>-->
 <%#= paginate posts %>
+
+<div class="card-deck mt-5">
+  <% groups.each do |group| %>
+    <div class="card shadow-lg">
+      <%= image_tag group.get_image(200, 200), class: "card-image-top h-50" %>
+      <div class="card-body">
+        <h4 class="card-title">
+          <%= link_to new_user_registration_path, class: "text-dark" do %>
+            <strong><i class="far fa-flag"></i><span> <%= group.name %></span></strong>
+          <% end %>
+        </h4>
+        <h6>メンバー数: <%= group.group_users.count %>
+          <!--<br><span>コメント数:<%#= post.post_comments.count %></span>-->
+          <!--<br><span class="favorite-btn"><%#= render "public/favorites/btn", post: post %></span>-->
+        </h6>
+        <p class="card-text">説明:<%= group.introduction %></p>
+        <!--<span><i class="fas fa-user"></i> By<%#= image_tag group.user.get_profile_image(30,30), class:"rounded-circle"; %><%#= post.user.name %></span>-->
+      </div>
+    </div>
+  <% end %>
+</div>
