--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -2,14 +2,13 @@
 <!--  <%#= link_to new_post_path, class: 'btn btn-outline-warning' do %>-->
 <!--    <i class="fa-solid fa-pen-to-square"></i>-->
 <!--  <%# end %>-->
-<!--  <%#= link_to "いいねした投稿", favorites_user_path(@user) %>-->
 <!--</div>-->
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-4'>
       <h2><%= @user.name %>さんの会員情報</h2>
       <%= render 'info', user: @user %>
-      <h2 class="mt-3"><%= @user.name %>さんの</h2><h2>参加中コミュニティ</h2>
+      <h2 class="mt-3"><%= @user.name %>さんの</br>参加中コミュニティ</h2>
       <%= render 'user_groups', user: @user %>
     </div>
     <div class='col-md-8'>
@@ -21,8 +20,8 @@
           <% end %>
         </div>
       </div>
-      <h2><%= @user.name %>さんの投稿</h2>
-      <%= render 'public/posts/index',posts: @posts %>
+      <h2><%= @user.name %>さんがいいねした投稿</h2>
+      <%= render 'public/users/favorite_posts',posts: @favorite_posts %>
     </div>
   </div>
 </div>
