[Add] group_icon

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -38,7 +38,7 @@
     <div class="image1 carousel-item active">
       <div class="carousel-caption d-none d-md-block">
         <h1>さあ、朝活を始めようか。</h1>
-        <h3>〜朝活で日本を元気に~</h3>
+        <h3>〜朝活で日本を元気に〜</h3>
       </div>
     </div>
     <div class="image2 carousel-item">
