--- a/app/views/public/users/_info.html.erb
+++ b/app/views/public/users/_info.html.erb
@@ -19,6 +19,9 @@
   <%= link_to edit_user_path(user.id), class: "btn btn-outline-warning mr-2" do %>
     <i class="fa-solid fa-user-pen"></i>
   <% end %>
+  <%= link_to new_group_path, class: "btn btn-outline-warning mr-2" do %>
+    <i class="fa-solid fa-people-group"></i>
+  <% end %>
   <%= link_to new_post_path, class: 'btn btn-outline-warning' do %>
     <i class="fa-solid fa-pen-to-square"></i>
   <% end %>
