--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -44,7 +44,7 @@
     <div class="image2 carousel-item">
       <div class="carousel-caption d-none d-md-block">
         <h1>何ができるの?</h1>
-        <h3>朝活仲間を作り、朝活を継続できるようになります。</h3>
+        <h3>朝活仲間と共に、朝活を継続できるようになります。</h3>
       </div>
     </div>
     <div class="image3 carousel-item">
