--- a/app/views/public/groups/edit.html.erb
+++ b/app/views/public/groups/edit.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h3>コミュニティ編集</h3>
+        <%= render 'layouts/errors', obj: @group %>
         <%= render 'public/groups/form', group: @group %>
     </div>
   </div>
