--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -2,8 +2,8 @@
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
     <h2>プロフィール編集</h2>
+    <%= render 'layouts/errors', obj: @user %>
     <%= form_with model: [:public, @user], url: user_path(@user.id), method: :patch, local: true do |f| %>
-      <%#= render 'layouts/errors', obj: @user %>
       <div class="form-group">
         <%= f.label :profile_image, "プロフィール画像" %>
         <%= f.file_field :profile_image, class: "form-control-file user_image", accept: 'image/*' %>
