--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -13,6 +13,7 @@
         <%= f.text_field :title, class: "form-control" %>
       </div>
       <div class="form-group">
+        <!--:genre_nameはpostに紐づいたジャンルモデルのnameという意味?-->
         <%= f.label :genre_name, "投稿ジャンル(,で複数ジャンル付けできます)" %>
         <%= f.text_field :genre_name, class: 'form-control book_tag_name' %>
       </div>
