--- a/app/views/public/announcements/new.html.erb
+++ b/app/views/public/announcements/new.html.erb
@@ -12,10 +12,11 @@
       </div>
       <div class="form-group">
         <%= f.radio_button :achieve_status, Announcement.achieve_statuses.key(0) %>
-        <%= f.label :achieve_status, Announcement.achieve_statuses_i18n[:nonachieve] %>
+        <!--labelの方にもvalue: Announcement.achieve_statuses.key(0)を指定してやらないと、radio_buttonのテスト「expect(page).to have_checked_field('未達成')」がうまくいかない-->
+        <%= f.label :achieve_status, Announcement.achieve_statuses_i18n[:nonachieve], value: Announcement.achieve_statuses.key(0) %>
 
         <%= f.radio_button :achieve_status, Announcement.achieve_statuses.key(1) %>
-        <%= f.label :achieve_status, Announcement.achieve_statuses_i18n[:achieve]%>
+        <%= f.label :achieve_status, Announcement.achieve_statuses_i18n[:achieve], value: Announcement.achieve_statuses.key(1) %>
       </div>
 
       <div class="form-group">
