--- a/app/views/public/chats/_index.html.erb
+++ b/app/views/public/chats/_index.html.erb
@@ -17,10 +17,10 @@
       </p>
     <% end %>
   <% end %>
-  /*<style>*/
+  <style>
   /*  nav ul.pagination {*/
   /*    display: none;*/
   /*  }*/
-  /*</style>*/
-  
+  </style>
+
  <%# = paginate chats %>
