--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -1,8 +1,10 @@
 <div class="card-deck">
-  <% posts.each do |post| %>
+  <% count = 0 %>
+  <!--each_with_indexで、0.1.2...とcardを繰り返す-->
+  <% posts.each_with_index do |post, index| %>
    <% unless post.user.is_deleted %>
     <!--<div class="card w-200 mx-auto mt-4 h-500 shadow-lg">-->
-    <div class="card mt-4 shadow-lg">
+    <div class="card mt-1 mr-2 ml-1 px-0 shadow-lg col-4">
       <%= image_tag post.get_post_image(200, 200), class: "card-image-top h-50" %>
       <div class="card-body">
         <h4 class="card-title">
@@ -18,7 +20,49 @@
         <span><i class="fas fa-user"></i> By<%= image_tag post.user.get_profile_image(30,30), class:"rounded-circle"; %><%= post.user.name %></span>
       </div>
     </div>
+    <!--ページにある投稿 + 1(投稿数1の場合は、index = 0)-->
+   <% count = index + 1 %>
    <% end %>
+  <% end %>
+  <!--例えば投稿数1の場合は、count = 1になる。countが3でないとき(true)は、?の(3-(count%3))をする。countが3の時(false)は、0を返す。-->
+  <!--(3-(count%3))は、例えばcount = 1の時は、3-(1 % 3)。(1 % 3)は、０余り1と言う意味。よって(3-(count%3))は3-1なので、2を返す。-->
+  <!--↓三項演算子-->
+  <% col = count != 3 ? (3-(count%3)) : 0 %>
+  <!--上記の結果の場合、for文で1から2までを繰り返し、その文col-4のdivタグを挿入する-->
+  <% for num in 1..col %>
+    <div class="col-4"></div>
   <% end %>
 </div>
 <%= paginate posts %>
+
+
+<!--<%# posts.each do |post| %>-->
+<!-- <%# unless post.user.is_deleted %>-->
+  <!--<div class="card w-200 mx-auto mt-4 h-500 shadow-lg">-->
+<!--  <div class="card mb-3 shadow-lg" style="max-width: 650px;">-->
+<!--    <div class="row no-gutters">-->
+<!--      <div class="col-md-6">-->
+<!--         <%#= image_tag post.get_post_image(200, 200), class: "card-image-top w-100 h-100" %>-->
+<!--      </div>-->
+<!--      <div class="col-md-6">-->
+<!--        <div class="card-body text-center">-->
+<!--          <h5 class="card-title">-->
+<!--            <%#= link_to post_path(post.id), class: "text-dark" do %>-->
+<!--              <strong><i class="far fa-flag"></i><span> <%#= post.title %></span></strong>-->
+<!--            <%# end %>-->
+<!--          </h5>-->
+<!--          <p class="card-text" id="post_<%#= post.id %>">-->
+<!--            <%#= post.created_at.strftime('%Y/%m/%d') %>-->
+<!--            <br><span class="comments-count">コメント数:<%#= post.post_comments.count %></span>-->
+<!--            <br><span class="favorite-btn"><%#= render "public/favorites/btn", post: post %></span>-->
+<!--          </p>-->
+<!--          <p class="card-text">-->
+<!--            <small class="text-muted">説明:<%#= post.body %></small>-->
+<!--          </p>-->
+<!--          <p class="card-text"><i class="fas fa-user"></i> By<%#= image_tag post.user.get_profile_image(30,30), class:"rounded-circle"; %><%#= post.user.name %></p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!-- <%# end %>-->
+<!--<%# end %>-->
