--- a/app/views/public/users/_calendar.html.erb
+++ b/app/views/public/users/_calendar.html.erb
@@ -1,3 +1,14 @@
-<%= month_calendar do |date| %>
+<!--dateを繰り返している。-->
+<!--もし、eventモデルを作るなら、:start_timeカラムがあるので、その日に始まるイベントを表示できる。-->
+<!--https://qiita.com/AKI3/items/109d54a35c98328d9155-->
+<!--https://qiita.com/YmBIgo/items/54235db00bde93ab45fc-->
+
+<%= month_calendar announcements: announcements do |date, announcements| %>
   <%= date.day %>
+
+  <% announcements.each do |announcement| %>
+    <div>
+      <%= announcement.announcement %>
+    </div>
+  <% end %>
 <% end %>
