--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -36,7 +36,7 @@
           <div id="tab2" class="tab">
             <p>
               <div id="calendar">
-                <%= render "public/users/calendar" %>
+                <%= render "public/users/calendar", announcements: @announcements %>
               </div>
             </p>
           </div>
